# global_fusion

./: CMakeLists.txt  package.xml
src/: alignment.hpp  globalNode.cpp  globalOpt.cpp  globalOpt.h  integration_base.h
src/factors/: GPSFactor.h  VIOFactor.h  VIOFactorAuto.h  attFactor.h  attFactorAuto.h  baroFactor.h  localAlignAuto.h  magFactor.h
